# blog

./: .gitignore  CHANGELOG.md  LICENSE  README.md  ant.cabal  blog.cabal
app/: Main.hs
src/: HtmlRender.hs  HtmlTypes.hs  MarkdownParser.hs  MarkdownTypes.hs
static/: articles.css  blog.css  index.html  index.js  loadBlogs.js  modal.js  reset.css  style.css  svg.css  svg.js  svgator_remover9000.bash  themes.conf
static/blogs/: Blog Post 1.html  Resume.html  Title.html  list.json
test/: Main.hs  spec.json
