cabal-version:       3.4
name:                blog
version:             0.1.0.0
-- synopsis:         A simple game (optional, fill if needed)
-- description:      (optional, fill if needed)
license:             AGPL-3.0-or-later
license-file:        LICENSE
author:              benjamin-voca
maintainer:          benjaminvocaa@gmail.com
-- copyright:
-- category:            Game
build-type:          Simple
extra-doc-files:     CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

common shared-deps
    import:         warnings
    build-depends:  base ^>=4.20.0.0,
                    megaparsec ^>=9.7.0,  
                    relude ^>=1.2.1.0,
                    containers ^>=0.7,
                    lens ^>=5.3.2,
                    hspec ^>=2.11.9,
                    filepath ^>=1.5.3.0,
                    vector ^>=0.13.1.0,  
                    parallel ^>=3.2.2.0,
                    async ^>=2.2.5,
                    criterion ^>=1.6.3.0,
                    random ^>=1.2.1.3,
                    quickspec ^>= 2.2,
                    QuickCheck ^>= 2.15.0.1

                    
    mixins:   base hiding (Prelude)
            , relude (Relude as Prelude)
            , relude
    default-language: GHC2024
    default-extensions:
        OverloadedStrings,
        TemplateHaskell,
        Arrows

library
    import:           shared-deps
    exposed-modules:  MyLib
    -- other-modules:    -- Add here if you define additional internal modules
    -- other-extensions:
    hs-source-dirs:   src

executable blog
    import:           shared-deps
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:    blog
    hs-source-dirs:   app

test-suite blog-test
    import:           shared-deps
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    build-depends:    blog
